# rustbot

./: .env  .env.example  .gitignore  .initial_training_done  CHECKLIST.md  Cargo.toml  DATA_JUP_SOL_Orca_OHLCV_5min.csv  DATA_SOL_USDC_OHLCV_5min.csv  PROJECT_STATUS_AND_NEXT_STEPS.md  README.md  ROADMAP.md  api_response.txt  api_server.py  asset_encoder_trading.pkl  backtest_nn_model.py  birdeye_ohlcv_fetch.py  build.rs  build_log.txt  cert.pem  check_torch_cuda.py  config.toml  create_py311_venv.sh  dextools_single_ohlcv.py  fetch_dextools_ohlcv.py  fetch_market_data.py  fetch_ohlcv.py  fetch_top_100_solana.py  fix_signature_issue.py  helius_api_tester.py  key.pem  ml_infer.py  model_trading.pt  ohlcv_data_helius_8BnEgHoWFysVcuFFX7QztDmzuH8r5ZFvyP3sYwn1XTh6_20250427_to_20250527.csv  ohlcv_data_helius_8BnEgHoWFysVcuFFX7QztDmzuH8r5ZFvyP3sYwn1XTh6_20250520_to_20250527.csv  pool_addresses.json  pool_map.json  requirements.txt  run.sh  signals.jsonl  solana_historical_data_fetcher.py  (+4 more)
.cursor/rules/: know-your-venv.mdc
config/: config.toml
cpp_cuda_check/: CMakeLists.txt  cuda_check.cpp
data/: checkpoint_ohlcv.pkl.bak  checkpoint_ohlcv.pkl.completed  checkpoint_ohlcv.pkl.completed.bak  feature_importances.csv  features_test_ohlcv.csv  features_train_ohlcv.csv  merged_ohlcv.csv  ohlcv_data_8BnEgHoWFysVcuFFX7QztDmzuH8r5ZFvyP3sYwn1XTh6_20250520.csv  ohlcv_data_8BnEgHoWFysVcuFFX7QztDmzuH8r5ZFvyP3sYwn1XTh6_20250521.csv  ohlcv_data_8BnEgHoWFysVcuFFX7QztDmzuH8r5ZFvyP3sYwn1XTh6_20250524.csv  processed_markets.json  signature_cache.pkl.bak
data/features/: 2JYuVHdmRtKu47xiNgff5eTJwxBFpTnBFkF8HYJFNL3S_20250515_235933.csv  3h1H6gNEGRsKCV76FDJTQaN9g1LNkGPPX3XmKdispump_20250515_235822.csv  7C5SPivzYtk2umHScjLXN7WZnstLFf1r5TCsMNaTpump_latest.csv  7Gg6J1nkHLVV2TMqhVGHS1BrYycDmLoux9R3GSy2pump_20250515_233230.csv  7Gg6J1nkHLVV2TMqhVGHS1BrYycDmLoux9R3GSy2pump_latest.csv  8WzDFPNjUSV7ZPpNiqKY8NcWH9J4tDSgSeifp6Kboop_latest.csv  8stssUiCFbcB2LqCS62EuU2x1K2NWbJJo1YPgskpftWK_latest.csv  E1jCTXdkMRoawoWoqfbhiNkkLbxcSHPssMo36U84pump_20250515_222337.csv  E1jCTXdkMRoawoWoqfbhiNkkLbxcSHPssMo36U84pump_20250515_235502.csv  EpXBP1mNofE6j55wAty4poUh4cJPQS7NWDdCD9HSpump_20250515_235500.csv  Es9vMFrzaCERmJfrF4H2FYD4KCoNkY11McCe8BenwNYB_20250515_222207.csv  Es9vMFrzaCERmJfrF4H2FYD4KCoNkY11McCe8BenwNYB_20250515_235937.csv  FP9axFNBC1V68BLTDqtWAP6vVVqP9daNr57wmx4Tpump_latest.csv  HcQbgvMTCNDgMDY6GAFzP1WwCNZeMoEwZfUuHepzC9L5_latest.csv  HqqnXZ8S76rY3GnXgHR9LpbLEKNfxCZASWydNHydpump_20250515_232306.csv  HqqnXZ8S76rY3GnXgHR9LpbLEKNfxCZASWydNHydpump_20250515_235127.csv  Hrh6QCmnGjtq3gqg4xZzncXS7wAWeVmu7SCRfQ4N5H6S_latest.csv  J1toso1uCk3RLmjorhTtrVwY9HJ7X8V9yYac6Y7kGCPn_latest.csv  J5MopnZxBw7E3CRGC28hrKA3MXvmQ8Gwn4n9cPezKX3k_20250515_222336.csv  J5MopnZxBw7E3CRGC28hrKA3MXvmQ8Gwn4n9cPezKX3k_20250515_235339.csv  So11111111111111111111111111111111111111112_latest.csv  ada_usd_features.csv  bonk_usd_features.csv  eth_usd_features.csv  link_usd_features.csv  sol_usd_features.csv  usdt_usd_features.csv  wif_usd_features.csv
data/processed/: processed_data_20250516_003943.csv  processed_data_20250604_221935.csv.bak  processed_data_20250608_223207.csv.bak  test_data.csv  train_data.csv
data/raw/: $rich_usd_ohlcv.csv  $truth_usd_ohlcv.csv  $wif_usd_ohlcv.csv  ai16z_usd_ohlcv.csv  aicreator_usd_ohlcv.csv  alexis_usd_ohlcv.csv  arc_usd_ohlcv.csv  birdeyeAPI.py  blk_usd_ohlcv.csv  bluff_usd_ohlcv.csv  bome_usd_ohlcv.csv  bonk_usd_ohlcv.csv  bscreener_usd_ohlcv.csv  btc_usd_ohlcv.csv  buddy_usd_ohlcv.csv  cbbtc_usd_ohlcv.csv  chad_usd_ohlcv.csv  chewy_usd_ohlcv.csv  chillhouse_usd_ohlcv.csv  chuanpu_usd_ohlcv.csv  clams_usd_ohlcv.csv  click_usd_ohlcv.csv  cmd_usd_ohlcv.csv  code_usd_ohlcv.csv  com_usd_ohlcv.csv  cycle_usd_ohlcv.csv  dmt_usd_ohlcv.csv  dun_usd_ohlcv.csv  dupe_usd_ohlcv.csv  fartgirl_usd_ohlcv.csv  fitcoin_usd_ohlcv.csv  fog_usd_ohlcv.csv  fried_usd_ohlcv.csv  (+83 more)
docs/: SENTIMENT_ANALYSIS.md  alert_thresholds.doc  api_components.md  api_endpoints.doc  api_security_guide.md  auth.doc  components.md  dashboard.doc  deployment.doc  functions.md  health_monitoring.doc  ml_components.md  ml_usage_guide.md  monitoring.doc  monitoring_components.md  order_execution.md  performance_metrics.doc  portfolio_management.md  position_sizing.md  risk_management.md  security_components.md  setup_instructions.doc  telegram_bot.doc  telegram_components.md  telegram_notifications.doc  trading_components.md  trading_signals.md  user_guide.doc  wallet_components.md  web.doc  web_components.md  web_server.doc  yubikey.doc  yubikey_integration.doc
migrations/: 20240320000000_create_market_data.sql
ml_pipeline/: feature_engineering.py  prediction.py  training.py  your_model_definition_file.py
models/: best_model_20250518_201712.pt  final_model_20250518_201713.pt  poloniex_solusdc_1h_v1.ot  scaler_X_20250518_201713.pkl  scaler_y_20250518_201713.pkl  trading_model.ot
scripts/: add_features.py  backtest_tree_model.py  deploy.sh  fetch_historical_ohlcv.py  fetch_historical_ohlcv_threaded.py  fetch_ohlcv_rolling.py  fetch_pool_addresses.py  fetch_sentiment.py  fetch_top_solana_tokens.py  install_sentiment_deps.sh  prepare_training_data.py  rollback.sh  run_ohlcv_fetch_background.sh  run_pipeline.py  run_sentiment_and_pipeline.py  sentiment_crawler.py  setup.sh  setup_daily_fetch.sh  solana_sentiment.py  trading-bot.service  train_and_backtest.py
src/: bot.rs  cli.rs  data_loader.rs  error.rs  lib.rs  logging.rs  main.rs  metrics.rs  ml_api_adapter.rs  strategies.rs  validation.rs
tch_test/: .gitignore  Cargo.toml
tch_test/src/: main.rs
test_model_versioning.pt/: version_1.0.0.json
(+69 files in other folders)
