[package]
name = "tch_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tch = "0.20.0"
#tch = { version = "0.20.0", features = ["download-libtorch"] }
#tch = { version = "0.20.0", features = ["cuda", "download-libtorch"] }
#tch = { version = "0.13.0", features = ["cuda"] }
#tch = { version = "0.13.0" } #, features = ["cuda", "download-libtorch"] }
#tch = { version = "0.19.0" }
tch = { version = "0.15.0", features = ["cuda", "download-libtorch"] }
#tch = { version = "0.14.0", features = ["cuda"] }

# [profile.dev]
# opt-level = 3 