[package]
name = "tch_test"
version = "0.1.0"
edition = "2021"
 
[dependencies]
#tch = "0.20.0"
#tch = { version = "0.20.0", features = ["download-libtorch"] }
#tch = { version = "0.20.0", features = ["cuda", "download-libtorch"] }
#tch = { version = "0.13.0", features = ["cuda"] }
#tch = { version = "0.13.0" } #, features = ["cuda", "download-libtorch"] }
#tch = { version = "0.19.0" }
#tch = { version = "0.15.0", features = ["cuda", "download-libtorch"] } # Previous
#tch = { version = "0.14.0", features = ["cuda"] }
# tch = { git = "https://github.com/LaurentMazare/tch-rs", branch = "main" }
pyo3 = { version = "0.20", features = ["auto-initialize"] }
numpy = "0.20"

# [profile.dev] 